# Example_shop

./: .gitignore  docker-compose.yml  pyproject.toml
application-fastAPI/: main.py
application-fastAPI/alembic/: env.py
application-fastAPI/alembic/versions/: 0137127c8825_create_users_table.py  caffc71ece79_create_tables_product_profile_user_.py
application-fastAPI/api/: api_v1.py
application-fastAPI/api/api_v1/: users.py
application-fastAPI/core/: config.py
application-fastAPI/core/models/: __init__.py  base.py  basket.py  db_helper.py  product.py  profile_user.py  user.py
application-fastAPI/core/schemas/: user.py
application-fastAPI/crud/: users.py
